--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,13 @@
 		"type_traits": "cpp",
 		"typeinfo": "cpp",
 		"utility": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"array": "cpp",
+		"*.tcc": "cpp",
+		"clocale": "cpp",
+		"unordered_map": "cpp",
+		"optional": "cpp",
+		"sstream": "cpp",
+		"cinttypes": "cpp"
 	}
 }
