obstacles added to SDL

--- a/SnakeSDL/Makefile
+++ b/SnakeSDL/Makefile
@@ -6,7 +6,7 @@
 #    By: Roger Ndaba <rogerndaba@gmil.com>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/07/02 20:41:15 by Roger Ndaba       #+#    #+#              #
-#    Updated: 2019/07/03 10:54:24 by Roger Ndaba      ###   ########.fr        #
+#    Updated: 2019/07/03 15:00:32 by Roger Ndaba      ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,8 +21,8 @@ FLAGS =  -L SDL2/lib -lSDL2_ttf -lSDL2 -lSDL2main -lfreetype
 all: $(NAME)
 
 $(NAME): fclean
-	@ # $(CC) -o snake $(SRC2) -I ../ -I SDL2/include $(FLAGS)
-	@  $(CC) -o $(NAME) -shared -fPIC $(SRC) -I ../ -I SDL2/include $(FLAGS) 
+	@  $(CC) -o snake $(SRC2) -I ../ -I SDL2/include $(FLAGS)
+	@ # $(CC) -o $(NAME) -shared -fPIC $(SRC) -I ../ -I SDL2/include $(FLAGS) 
 
 clean:
 	@rm -fr $(NAME)
