--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/SnakeAllegro/libSnakeAllegro.so
                    COMMAND make
                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/SnakeAllegro
 )
-target_compile_options (nibbler PRIVATE -Wall -Wextra -Werror -std=c++11)
+target_compile_options (nibbler PRIVATE -g -Wall -Wextra -Werror -std=c++11)
 target_link_libraries(nibbler -ldl)
