--- a/SnakeAllegro/Makefile
+++ b/SnakeAllegro/Makefile
@@ -16,7 +16,7 @@ SRC = SnakeAllegro.cpp
 SRC2 = SnakeAllegro.cpp main.cpp
 CC =  g++ -g -Wall -Wextra -Werror -std=c++11
 
-FLAGS =  -L allegro/lib  -lallegro_acodec -lallegro_audio -lallegro_color -lallegro_dialog -lallegro_font -lallegro_image -lallegro_main -lallegro_memfile -lallegro_physfs -lallegro_primitives -lallegro -lallegro_ttf -lallegro_video
+FLAGS =  -L allegro/lib -lallegro  -lallegro_acodec -lallegro_audio -lallegro_color -lallegro_dialog -lallegro_font -lallegro_image -lallegro_main -lallegro_memfile -lallegro_physfs -lallegro_primitives -lallegro -lallegro_ttf -lallegro_video
 
 all: $(NAME)
 
