--- a/SnakeFLTK/Makefile
+++ b/SnakeFLTK/Makefile
@@ -6,7 +6,7 @@
 #    By: Roger Ndaba <rogerndaba@gmail.com>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/07/15 11:47:19 by Roger Ndaba       #+#    #+#              #
-#    Updated: 2019/07/16 11:07:16 by Roger Ndaba      ###   ########.fr        #
+#    Updated: 2019/07/17 16:31:25 by Roger Ndaba      ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,12 +23,13 @@ FLAGS = -lfltk
 all: $(NAME)
 
 $(NAME): fclean
-	@  $(CC) -o snake $(SRC2) $(INCL) $(LIBS) $(FLAGS)
-	@ # $(CC) -shared -fPIC -o $(NAME) $(SRC) $(INCL) $(LIBS) $(FLAGS)
+	@ # $(CC) -o snake $(SRC2) $(INCL) $(LIBS) $(FLAGS)
+	@  $(CC) -shared -fPIC -o $(NAME) $(SRC) $(INCL) $(LIBS) $(FLAGS)
 
 clean:
 	@rm -fr $(NAME)
 	@rm -fr $(NAME).dSYM
+	@rm -fr *.dSYM
 
 fclean : clean
 
